# GTA

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
gta/: fetch.py  main.py
tests/: conftest.py  test_fetcher.py  test_routes.py
