[project]
name = "gta"
version = "0.2.0"
description = "An API for trending GitHub repositories"
authors = [
    {name = "tamton-aquib", email = "aquibjavedt007@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.11",
    "requests>=2.28",
    "flask>=2.2",
    "flask-limiter>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
